# enr-relics-importer

./: .gitignore  Dockerfile  README.md  analyze_relics.py  extract_templates.py  main.py  pyproject.toml  run_analyze_relics.bat  run_analyze_relics.command
.github/workflows/: release.yaml
